tests/errors/missing_len.re
fn main() {
    decl x: arr[int];
}